| 3.0.0 - 3.0.7 (these versions are discouraged)   | 3.6 or later      |
| 2.4.7                                            | 2.7 or later      |
| 1.5.7                                            | 2.6 - 2.7         |
+--------------------------------------------------+-------------------+

Version 3.2.5 - September, 2025
-------------------------------


Version 3.2.4 - September, 2025
-------------------------------
- Barring any catastrophic bugs in this release, this will be the last release in
  the 3.2.x line. The next release, 3.3.0, will begin emitting `DeprecationWarnings`
  when the pre-PEP8 methods are used (see header notes above for more information,
  including available automation for converting any existing code using
  pyparsing with the old names).

- Fixed bug when using a copy of a `Word` expression (either by using the explicit
  `copy()` method, or attaching a results name), and setting a new expression name,
  a raised `ParseException` still used the original expression name. Also affected
  `Regex` expressions with `as_match` or `as_group_list` = True. Reported by
  Waqas Ilyas, in Issue #612 - good catch!

- Fixed type annotation for `replace_with`, to accept `Any` type. Fixes Issue #602,
  reported by esquonk.

- Added locking around potential race condition in `ParserElement.reset_cache`, as
  well as other cache-related methods. Fixes Issue #604, reported by CarlosDescalziIM.

- Substantial update to docstrings and doc generation in preparation for 3.3.0,
  great effort by FeRD, thanks!

- Notable addition by FeRD to convert docstring examples to work with doctest! This
  was long overdue, thanks so much!


Version 3.2.3 - March, 2025
---------------------------
- Fixed bug released in 3.2.2 in which `nested_expr` could overwrite parse actions
  for defined content, and could truncate list of items within a nested list.
  Fixes Issue #600, reported by hoxbro and luisglft, with helpful diag logs and
  repro code.

