@@ -125,7 +125,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 2, 5, "final", 1)
-__version_time__ = "16 Sep 2025 19:39 UTC"
+__version_time__ = "16 Sep 2025 22:24 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
